# MathHelper

./: .env.example  .gitignore  README.md  design.md  pyproject.toml  requirements.txt
data/eval/: README.md  dev.json
docs/: eval-baseline.md
docs/superpowers/plans/: 2026-06-19-local-web-app.md
docs/superpowers/specs/: 2026-06-19-local-web-app-design.md
scripts/: demo_agents.py  evaluate.py  evaluate_math_accuracy.py  reward_gsm8k_grpo.py  serve_web.py  train_gsm8k_sft_dapo.py  train_gsm8k_sft_qlora.py
scripts/legacy/: eval_gsm8k_math500.py  eval_suite.py
scripts/verl/: run_grpo_4gpu.sh  run_sft_4gpu.sh
src/mathcoach/: __init__.py  config.py  pipeline.py
src/mathcoach/agents/: __init__.py  base.py  problem_understanding.py  solving_planning.py  solving_verification.py  teaching_explanation.py  trace.py
src/mathcoach/eval/: __init__.py  grader.py  loader.py  reporter.py  runner.py  types.py
src/mathcoach/llm/: __init__.py  chat_result.py  openrouter_client.py
src/mathcoach/prompts/: __init__.py  problem_understanding.py  shared.py  solving_planning.py  solving_verification.py  teaching_explanation.py
src/mathcoach/schemas/: __init__.py  inputs.py  plan.py  problem.py  teaching.py  verification.py
src/mathcoach/tools/: __init__.py  sympy_verifier.py
src/mathcoach/utils/: __init__.py  json_parser.py  (+2 more)
src/mathcoach_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mathhelper/: __init__.py  eval_utils.py
tests/: __init__.py  test_eval_loader.py  test_eval_reporter.py  test_eval_runner.py  test_grader.py  test_json_parser.py  test_math_format.py  test_pipeline.py  test_schemas.py  test_solving_verification_agent.py  test_sympy_verifier.py  test_trace_printer.py  test_web_app.py
(+5 files in other folders)
