[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathcoach-agent"
version = "0.1.0"
description = "Multi-agent math coaching system with problem understanding, solving, verification, and teaching."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "httpx"]
# Reserved for the solving/verification agent in a later phase.
solve = ["sympy", "numpy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mathcoach = [
  "web/static/*",
  "web/static/vendor/katex/*",
  "web/static/vendor/katex/contrib/*",
  "web/static/vendor/katex/fonts/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]
